--- a/sales-data.ipynb
+++ b/sales-data.ipynb
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "290931ea-da43-48a4-ab64-9a4e14cbb01e",
    "metadata": {},
    "outputs": [
@@ -390,39 +390,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "age_group             10-19        20-29        30-39        40-49  \\\n",
+      "age_range             10-19        20-29        30-39        40-49  \\\n",
       "category                                                             \n",
-      "Books              19891.95     80128.35     84446.10     82946.25   \n",
-      "Clothing         3029007.52  10079987.28  11516170.16  10933114.72   \n",
-      "Cosmetics         178009.48    594733.82    722406.22    656740.32   \n",
-      "Food & Beverage    20433.61     74271.23     89187.19     85034.57   \n",
-      "Shoes            1367187.26   6152942.84   7178633.37   6775319.13   \n",
-      "Souvenir           20128.68     53570.91     63705.63     65007.66   \n",
-      "Technology       1772400.00   5049450.00   6231750.00   5840100.00   \n",
-      "Toys               98273.28    380011.52    426460.16    378864.64   \n",
+      "Books              12801.75     79461.75     84143.10     87203.40   \n",
+      "Clothing         1927413.84  10250732.80  11354126.96  11215189.92   \n",
+      "Cosmetics         109619.36    605915.32    723544.70    665034.96   \n",
+      "Food & Beverage    13582.31     73491.96     87246.86     89553.29   \n",
+      "Shoes             993281.35   5924878.24   7200839.66   7025590.02   \n",
+      "Souvenir           12375.15     54943.32     64092.72     66391.80   \n",
+      "Technology       1129800.00   5261550.00   6159300.00   5954550.00   \n",
+      "Toys               60426.24    385100.80    420582.40    390906.88   \n",
       "\n",
-      "age_group              50-59        60-69       70-79       80-89  \n",
-      "category                                                           \n",
-      "Books               79537.50     76234.80    56251.95    21103.95  \n",
-      "Clothing         10819684.48  10004067.04  7871098.40  3739897.04  \n",
-      "Cosmetics          621366.12    599735.00   427824.52   214684.80  \n",
-      "Food & Beverage     77686.42     76127.88    55584.44    25334.12  \n",
-      "Shoes             6268175.48   5499357.71  4718536.54  2125201.97  \n",
-      "Souvenir            57594.30     51482.97    38439.21    20234.25  \n",
-      "Technology        4662000.00   5218500.00  3773700.00  1449000.00  \n",
-      "Toys               357002.24    340659.20   285608.96   126336.00  \n"
+      "age_range              50-59        60-69       70-79  \n",
+      "category                                               \n",
+      "Books               74962.20     80476.80    54827.85  \n",
+      "Clothing         10321851.76  10660642.08  7769371.28  \n",
+      "Cosmetics          587780.96    649990.76   419082.62  \n",
+      "Food & Beverage     72425.04     80976.09    55050.98  \n",
+      "Shoes             5852857.84   5978893.54  4480269.05  \n",
+      "Souvenir            54943.32     55025.43    38673.81  \n",
+      "Technology        4435200.00   5471550.00  3638250.00  \n",
+      "Toys               345067.52    363955.20   273244.16  \n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "\n",
-    "\n",
-    "bins = [10, 20, 30, 40, 50, 60, 70, 80, 90]\n",
-    "labels = ['10-19', '20-29', '30-39', '40-49', '50-59', '60-69', '70-79', '80-89']\n",
-    "\n",
-    "\n",
-    "merged['age_group'] = pd.cut(merged['age'], bins=bins, labels=labels)\n",
     "\n",
     "\n",
     "pivot_table = merged.pivot_table(\n",
@@ -431,24 +424,22 @@
     "    columns='age_group',\n",
     "    aggfunc='sum',\n",
     "    fill_value=0,\n",
-    "    observed=False\n",
+    "    observed=False  \n",
     ")\n",
     "\n",
     "\n",
-    "pivot_table = pivot_table.round(2)\n",
+    "pivot = pivot.round(2)\n",
     "\n",
-    "print(pivot_table)"
+    "print(pivot)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e38a2d95-7ac4-45fb-8d52-7e79f42efcd4",
+   "id": "95a7eb3a-401c-4404-89f9-6718d80cc9f1",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
